--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -1,3 +1,5 @@
+@import url(../../styles/@global.sass)
+
 .header
   height: 101px
   background: linear-gradient(180deg, #FB9595 0%, #FDD8D8 49.48%, #FFFFFF 85.94%)
