--- a/src/components/About/about.sass
+++ b/src/components/About/about.sass
@@ -15,9 +15,11 @@
   @include heading-h1
   font-family: 'arkhip'
   font-weight: 400
+  margin-top: 41px
 
 .about__text
   @include textRegular-20
+  margin: 16px 0 24px
 
 .about__content
   display: flex
@@ -25,14 +27,12 @@
 
 .about__img
   width: 100%
+  height: 100%
+  margin-top: 42px
 
 .title-span
   @include heading-h1
   color: #FF3744
-
-
-.about__fonds
-  padding-top: 24px
 
 .about__fond
   padding-right: 25px
