--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -2,8 +2,7 @@
 
 .header
   height: 101px
-  background: linear-gradient(180deg, #FB9595 0%, #FDD8D8 49.48%, #FFFFFF 85.94%)
-  opacity: 0.7
+  background: linear-gradient(180deg, rgba(251, 149, 149, 0.7) 0%, rgba(253, 216, 216, 0.7) 49.48%, rgba(255, 255, 255, 0.7) 85.94%)
   display: flex
   align-items: center
 
