linksto icon in footer were added

--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -75,7 +75,8 @@
 .footer__second-block-address-icon
   background-image: url('../../assets/images/footer-address.svg')
   background-position: center
-  width: 30px
+  background-repeat: no-repeat
+  width: 40px
   height: 30px
 
 .footer__second-block-address-text
@@ -87,7 +88,8 @@
 .footer__second-block-phone-icon
   background-image: url('../../assets/images/footer-phone.svg')
   background-position: center
-  width: 30px
+  background-repeat: no-repeat
+  width: 40px
   height: 30px
 
 .footer__second-block-phone-text
@@ -95,10 +97,9 @@
 .footer__second-block-mail-icon
   background-image: url('../../assets/images/footer-mail.svg')
   background-position: center
-  width: 30px
+  background-repeat: no-repeat
+  width: 40px
   height: 30px
-
-
 
 .footer__law-block
   display: flex
