header navigation style fixed

--- a/src/components/Navigation/Navigation.sass
+++ b/src/components/Navigation/Navigation.sass
@@ -1,4 +1,8 @@
 
+.navigation__container
+  display: flex
+  gap: 64px
+
 @media screen and (max-width: 999px)
     .navigation__container
       display: flex
