--- a/src/styles/@fonts.sass
+++ b/src/styles/@fonts.sass
@@ -24,5 +24,5 @@
   font-style: normal
   font-weight: 400
   font-display: swap
-  src: url("../vendor/fonts/Arkhip_font.ttf") format("ttf")
+  src: url("../vendor/fonts/Arkhip_font.ttf") format("woff")
 
