--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -33,5 +33,8 @@
 .header__nav-link
   text-decoration: none
 
+.header__nav-link_active
+  color: red
+
 .header__nav-link:hover
   cursor: pointer
