--- a/src/pages/Schedule/Schedule.sass
+++ b/src/pages/Schedule/Schedule.sass
@@ -1,7 +1,7 @@
 .schedule
-  height: 500px
   margin: 0 auto 0
   display: flex
   flex-direction: column
   align-items: center
+  min-height: calc(100vh - 101px - 256px - 60px)
 
