all screen view

--- a/src/styles/@global.sass
+++ b/src/styles/@global.sass
@@ -6,3 +6,10 @@
   font-style: normal
   font-weight: 400
   color: black
+.page
+  display: flex
+  flex-direction: column
+  min-height: 100vh
+
+.main
+  flex-grow: 1
