--- a/src/pages/Schedule/Schedule.sass
+++ b/src/pages/Schedule/Schedule.sass
@@ -1,7 +1,21 @@
+@import '../../styles/@global.sass'
+@import  '../../styles/@mixins.sass'
+@import '../../styles/@fonts.sass'
+
+
 .schedule
   margin: 0 auto 0
   display: flex
   flex-direction: column
   align-items: center
   min-height: calc(100vh - 101px - 256px - 60px)
+
+.schedule__head
+  @include heading-h1
+  color: #FF3744
+  max-width: 575px
+  margin-bottom: 70px
+  text-align: center
+
+
 
