--- a/src/pages/AllNews/AllNews.sass
+++ b/src/pages/AllNews/AllNews.sass
@@ -1,2 +1,12 @@
 @import "../../styles/@global.sass"
 @import "../../styles/@mixins.sass"
+
+.AllNews__content
+  justify-content: space-between
+  display: flex
+  flex-direction: row
+  max-width: 1020px
+  flex-wrap: wrap
+
+.AllNews-card
+    max-width: 383px
