reviews error key fixed

--- a/src/pages/Schedule/Schedule.sass
+++ b/src/pages/Schedule/Schedule.sass
@@ -2,7 +2,6 @@
 @import  '../../styles/@mixins.sass'
 @import '../../styles/@fonts.sass'
 
-
 .schedule
   margin: 0 auto 0
   display: flex
@@ -14,7 +13,7 @@
   @include heading-h1
   color: #FF3744
   max-width: 575px
-  margin-bottom: 70px
+  margin: 64px 0 70px
   text-align: center
 
 
