--- a/src/components/Reviews/Reviews.sass
+++ b/src/components/Reviews/Reviews.sass
@@ -59,8 +59,16 @@
   left: 8px
   position: relative
 
+.reviews__image-container
+  overflow: hidden
+  width: 100%
+  height: 375px
 
 
 .reviews__card-img
   margin: 36px 0 0
   width: 100%
+  clip-path: url(#review-mask)
+  width: 100%
+  height: 100%
+  object-fit: cover
