--- a/src/components/ScheduleList/ScheduleList.sass
+++ b/src/components/ScheduleList/ScheduleList.sass
@@ -1,4 +1,6 @@
 @import '../../styles/@global.sass'
+@import  '../../styles/@mixins.sass'
+@import '../../styles/@fonts.sass'
 
 .schedule__list
   list-style: none
