--- a/src/components/Pagination/Pagination.sass
+++ b/src/components/Pagination/Pagination.sass
@@ -19,8 +19,16 @@
 
 .schedule__pages
   @include textRegular-16
+  border: none
+  background-color: white
   color: #6F6F6F
+  cursor: pointer
 
+schedule__pages_active
+  @include textSemiBold-16
+  border: none
+  background-color: white
+  color: #000000
 
 .schedule__pag-btn
   cursor: pointer
