--- a/src/pages/Schedule/Schedule.sass
+++ b/src/pages/Schedule/Schedule.sass
@@ -8,6 +8,7 @@
   flex-direction: column
   align-items: center
   min-height: calc(100vh - 101px - 256px - 60px)
+  min-width: 995px
 
 .schedule__head
   @include heading-h1
