--- a/src/components/ScheduleItem/ScheduleItem.sass
+++ b/src/components/ScheduleItem/ScheduleItem.sass
@@ -7,6 +7,9 @@
   flex-direction: column
   width: calc(100% / 2 - 150px)
 
+.scedule__item:hover
+  cursor: pointer
+
 .scedule__item:nth-child(-n+8)
   margin-bottom: 90px
 
