companies page add

--- a/src/pages/SingleNews/SingleNews.sass
+++ b/src/pages/SingleNews/SingleNews.sass
@@ -11,6 +11,7 @@
 .singleNews__navigation
   display: flex
   position: absolute
+  cursor: pointer
 
 .singleNews__goBack-button
   background-color: transparent
@@ -21,7 +22,7 @@
   @include textBold-20
 
 .singleNews__goBack-button_type_img
-  background-image: url('../../assets/images/button-news.svg')
+  // background-image: url('../../assets/images/button-news.svg')
   content: " "
   width: 12px
   height: 11px
@@ -41,7 +42,6 @@
 .singleNews__title
   @include heading-h2
   margin-top: 11px
-
   color: #FF3744
 
 .singleNews__text
@@ -57,4 +57,3 @@
   max-width: 450px
   box-sizing: content-box
   overflow: hidden
-
