--- a/src/pages/Сompanies/Companies.sass
+++ b/src/pages/Сompanies/Companies.sass
@@ -5,6 +5,7 @@
   display: flex
   flex-direction: column
   align-items: center
+  position: relative
 
 .companies__title
   @include heading-h1
@@ -40,6 +41,7 @@
   display: flex
   position: absolute
   cursor: pointer
+  left: -30px
 
 .companies__goBack-button
   background-color: transparent
