done pagination with pages

--- a/src/components/Pagination/Pagination.sass
+++ b/src/components/Pagination/Pagination.sass
@@ -19,14 +19,13 @@
 
 .schedule__pages
   @include textRegular-16
-  border: none
   background-color: white
   color: #6F6F6F
   cursor: pointer
+  text-decoration: none
 
 schedule__pages_active
   @include textSemiBold-16
-  border: none
   background-color: white
   color: #000000
 
