form validation was added

--- a/src/components/Form/Form.sass
+++ b/src/components/Form/Form.sass
@@ -111,3 +111,21 @@
 .form__agreement-link:hover
   cursor: pointer
 
+.form__button
+  background: rgba(255, 55, 68, 1)
+  border-radius: 30px
+  border: none
+  color: rgba(255, 255, 255, 1)
+  height: 38px
+  align-items: center
+  font-size: 16px
+  font-style: normal
+  cursor: pointer
+  width: 281px
+
+.form__button_disabled
+  background: #6F6F6F
+
+.form__error-text
+  color: rgba(255, 55, 68, 1)
+  font-size: 12px
