--- a/src/pages/Contacts/Contacts.sass
+++ b/src/pages/Contacts/Contacts.sass
@@ -7,17 +7,19 @@
 .contacts__title
   @include heading-h1
   color: rgba(243, 66, 71, 1)
+  padding-top: 147px
 
 .contacts__img
-  max-height: 308px
+  padding-top: 136px
+  max-height: 708px
 
 .contacts__main
-  margin-top: 200px
+  margin-top: 88px
   min-width: 1028px
   box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.1)
   border-radius: 30px
   text-align: left
-  margin-bottom: 300px
+  margin-bottom: 128px
 
 .contacts__text-block
   padding-bottom: 100px
