--- a/src/pages/ReviewSingle/ReviewSingle.sass
+++ b/src/pages/ReviewSingle/ReviewSingle.sass
@@ -4,32 +4,10 @@
   row-gap: 67px
   flex-direction: column
   max-width: 1200px
-
-.review-single__navigation
-  display: flex
-  align-items: center
-  column-gap: 13.34px
-
-.review-single__navigation:hover
-  cursor: pointer
-
-.review-single__goBack-button_type_img
-  background-image: url('../../assets/images/arrow-left.svg')
-  width: 13.33px
-  height: 13.33px
-
-.review-single__goBack-button
-  background-color: none
-  background: none
-  color: rgba(255, 55, 68, 1)
-  border: none
-  font-size: 20px
-  line-height: 100%
-
-.review-single__goBack-button:hover
-  cursor: pointer
+  position: relative
 
 .review-single__block
+  padding-top: 67px
   display: flex
   column-gap: 81px
 
