--- a/src/pages/SingleNews/SingleNews.sass
+++ b/src/pages/SingleNews/SingleNews.sass
@@ -7,28 +7,7 @@
   display: flex
   width: 1200px
   position: relative
-
-.singleNews__navigation
-  display: flex
-  position: absolute
-  cursor: pointer
-
-.singleNews__goBack-button
-  background-color: transparent
-  border: none
-  color: #FF3744
-  position: relative
-  left: 10px
-  @include textBold-20
-
-.singleNews__goBack-button_type_img
-  // background-image: url('../../assets/images/button-news.svg')
-  content: " "
-  width: 12px
-  height: 11px
-  top: 5px
-  position: relative
-  transform: rotate(180deg)
+  padding-bottom: 127px
 
 .singleNews__card
   padding-top: 67px
