--- a/src/components/NewsCard/NewsCard.sass
+++ b/src/components/NewsCard/NewsCard.sass
@@ -36,6 +36,12 @@
   @include textRegular-20
   margin: 32px 0
 
+.news-card__img
+  margin: 36px 0 0
+  width: 100%
+  height: 375px
+  object-fit: cover
+
 .news-card__button
   @include textBold-16
   background-color: #fff
