--- a/src/components/NewsCard/NewsCard.sass
+++ b/src/components/NewsCard/NewsCard.sass
@@ -39,8 +39,8 @@
 .news-card__img
   margin: 36px 0 0
   width: 100%
-  height: 375px
-  object-fit: cover
+  height: 335px
+  object-fit: contain
 
 .news-card__button
   @include textBold-16
