styles and img fixed

--- a/src/pages/Contacts/Contacts.sass
+++ b/src/pages/Contacts/Contacts.sass
@@ -10,12 +10,14 @@
   padding-top: 147px
 
 .contacts__img
-  padding-top: 136px
-  max-height: 708px
+  padding-top: 57px
+  width: 871px
+  object-fit: contain
 
 .contacts__main
   margin-top: 88px
-  min-width: 1028px
+  min-width: 100%
+  max-width: 1028px
   box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.1)
   border-radius: 30px
   text-align: left
