--- a/src/pages/NotFound/NotFound.sass
+++ b/src/pages/NotFound/NotFound.sass
@@ -18,7 +18,9 @@
 .notFound__img
   padding-top:  17px
 
+
 .notFound__title
+  padding-top:  17px
   @include heading-h1
   padding-bottom: 115px
 
