--- a/src/components/NewsCard/NewsCard.sass
+++ b/src/components/NewsCard/NewsCard.sass
@@ -40,7 +40,7 @@
   margin: 36px 0 0
   width: 100%
   height: 335px
-  object-fit: contain
+  object-fit: cover
 
 .news-card__button
   @include textBold-16
