--- a/src/pages/SingleNews/SingleNews.sass
+++ b/src/pages/SingleNews/SingleNews.sass
@@ -27,7 +27,16 @@
   @include textRegular-20
   margin: 32px 0
 
+.singleNews__video
+  width: 560px
+  height: 315px
+
 .singleNews__img
+  object-fit: contain
+  width: 100%
+  height: 100%
+  max-width: 403px
+  max-height: 363px
 
 .singleNews__text-block
   max-width: 720px
