--- a/src/components/NewsCard/NewsCard.sass
+++ b/src/components/NewsCard/NewsCard.sass
@@ -30,11 +30,23 @@
 .news-card__title
   @include heading-h3
   margin-top: 11px
+  height: 48px
   max-width: 350px
+  display: -webkit-box
+  -webkit-line-clamp: 2
+  -webkit-box-orient: vertical
+  overflow: hidden
+  // overflow: hidden
+  // max-height: 48px
 
 .news-card__text
   @include textRegular-20
   margin: 32px 0
+  display: -webkit-box
+  -webkit-line-clamp: 8
+  -webkit-box-orient: vertical
+  overflow: hidden
+  height: 176px
 
 .news-card__img
   margin: 36px 0 0
