--- a/src/pages/SingleNews/SingleNews.sass
+++ b/src/pages/SingleNews/SingleNews.sass
@@ -13,6 +13,7 @@
   padding-top: 67px
   display: flex
   justify-content: space-between
+  width: 100%
 
 .singleNews__create-date
   @include heading-h3
@@ -34,7 +35,6 @@
 .singleNews__img
   object-fit: contain
   width: 100%
-  height: 100%
   max-width: 403px
   max-height: 363px
 
