Reviews refactoring and review form added

--- a/src/pages/ReviewSingle/ReviewSingle.sass
+++ b/src/pages/ReviewSingle/ReviewSingle.sass
@@ -14,7 +14,6 @@
 .review-single__review-block
   display: flex
   flex-direction: column
-  row-gap: 32px
 
 .review-single__date
   margin: 0
@@ -28,10 +27,13 @@
   line-height: 110%
 
 .review-single__user
-  text-align: right
+  font-family: 'Arkhip'
+  font-style: normal
   font-weight: 400
-  font-size: 20px
-  line-height: 110%
+  font-size: 24px
+  line-height: 100%
+  margin: 14px 0 32px
+  color: #FF3744
 
 .review-single__image-container
   overflow: hidden
