--- a/src/pages/ReviewsAll/ReviewsAll.sass
+++ b/src/pages/ReviewsAll/ReviewsAll.sass
@@ -18,3 +18,20 @@
   grid-column-gap: 180px
   grid-row-gap: 92px
   list-style: none
+
+.reviews-all__add-review
+  max-width: 589px
+  width: 100%
+  height: 64px
+  background-color:  #FF3744
+  border-radius: 20px
+  border: none
+  align-self: center
+  font-style: normal
+  font-weight: 600
+  font-size: 20px
+  line-height: 100%
+  color: #FFFFFF
+
+.reviews-all__add-review:hover
+  cursor: pointer
