image adding bugs fixed

--- a/src/components/UpLoad/UpLoad.sass
+++ b/src/components/UpLoad/UpLoad.sass
@@ -2,6 +2,7 @@
   display: flex
   flex-direction: column
   gap: 8px
+  max-width: 180px
 
 .upload__load
   background: #FF3744
@@ -28,7 +29,7 @@
   height: 161px
   object-fit: cover
 
-.upload__preview-block
+.upload__selected-foto_hidden
   display: none
 
 .upload__preview-block_visible
@@ -36,11 +37,7 @@
   flex-direction: column
   gap: 8px
 
-.upload__preview-buttons
-  display: flex
-  gap: 25px
-
-.upload__preview-button
+.upload__delete
   width: 180px
   height: 36px
   border-radius: 20px
