--- a/src/components/UpLoad/UpLoad.sass
+++ b/src/components/UpLoad/UpLoad.sass
@@ -28,6 +28,7 @@
   width: 180px
   height: 161px
   object-fit: cover
+  clip-path: url(#poster-mask)
 
 .upload__selected-foto_hidden
   display: none
