--- a/src/pages/Schedule/Schedule.sass
+++ b/src/pages/Schedule/Schedule.sass
@@ -10,12 +10,13 @@
   min-height: calc(100vh - 101px - 256px - 60px)
   min-width: 995px
 
-.schedule__head
+.schedule__title
   @include heading-h1
   color: #FF3744
   max-width: 575px
   margin: 64px 0 70px
   text-align: center
 
-
-
+.schedule__head
+  margin: 64px 0 0
+  position: relative
