contacts margin fix

--- a/src/pages/Contacts/Contacts.sass
+++ b/src/pages/Contacts/Contacts.sass
@@ -7,7 +7,7 @@
 .contacts__title
   @include heading-h1
   color: rgba(243, 66, 71, 1)
-  padding-top: 147px
+  margin: 64px 0 0
 
 .contacts__img
   padding-top: 57px
