--- a/src/components/Pagination/Pagination.sass
+++ b/src/components/Pagination/Pagination.sass
@@ -3,7 +3,7 @@
 @import '../../styles/@fonts.sass'
 
 .schedule__nav
-  margin-bottom: 128px
+  margin: 0 auto
 
 .schedule__page-conntainer
   display: flex
