--- a/src/components/ScheduleItem/ScheduleItem.sass
+++ b/src/components/ScheduleItem/ScheduleItem.sass
@@ -5,7 +5,8 @@
 .scedule__item
   display: flex
   flex-direction: column
-  width: calc(100% / 2 - 150px)
+  max-width: 383px
+  list-style: none
 
 .scedule__item:hover
   cursor: pointer
