--- a/src/pages/Сompanies/Companies.sass
+++ b/src/pages/Сompanies/Companies.sass
@@ -22,7 +22,8 @@
   justify-content: space-between
 
 .companies-card
-  max-width: 420px
+  max-width: 383px
+  list-style: none
   overflow: hidden
 
 .companies-card__img
