--- a/src/components/ScheduleList/ScheduleList.sass
+++ b/src/components/ScheduleList/ScheduleList.sass
@@ -3,9 +3,10 @@
 @import '../../styles/@fonts.sass'
 
 .schedule__list
-  list-style: none
-  display: flex
-  flex-wrap: wrap
-  justify-content: space-between
-  max-width: 995px
-  margin-bottom: 65px
+    justify-content: space-between
+    display: flex
+    flex-direction: row
+    max-width: 1020px
+    flex-wrap: wrap
+    padding-bottom: 79px
+    min-width: 1020px
