Random mask component done

--- a/src/components/Review/Review.sass
+++ b/src/components/Review/Review.sass
@@ -50,7 +50,7 @@
 .review__card-img
   // margin: 36px 0 0
   width: 100%
-  clip-path: url(#review-mask)
+  clip-path: url(#review)
   width: 100%
   height: 100%
   object-fit: cover
