--- a/src/components/Pagination/Pagination.sass
+++ b/src/components/Pagination/Pagination.sass
@@ -2,34 +2,36 @@
 @import  '../../styles/@mixins.sass'
 @import '../../styles/@fonts.sass'
 
-.schedule__nav
-  margin: 0 auto
+.pagination__nav
+  display: flex
+  justify-content: center
+  padding-bottom: 125px
 
-.schedule__page-conntainer
+.pagination__page-conntainer
   display: flex
 
-.schedule__pages-list
+.pagination__pages-list
   display: flex
   list-style: none
   padding-left: 39px
   padding-right: 39px
 
-.schedule__pages-item:not(:last-child)
+.pagination__pages-item:not(:last-child)
   margin-right: 39px
 
-.schedule__pages
+.pagination__pages
   @include textRegular-16
   background-color: white
   color: #6F6F6F
   cursor: pointer
   text-decoration: none
 
-schedule__pages_active
-  @include textSemiBold-16
-  background-color: white
-  color: #000000
+// .pagination__pages_active
+//   @include textSemiBold-16
+//   background-color: white
+//   color: #000000
 
-.schedule__pag-btn
+.pagination__pag-btn
   cursor: pointer
   position: relative
   width: 10px
@@ -37,7 +39,7 @@ schedule__pages_active
   border: none
   background-color: white
 
-.schedule__forward-btn:before
+.pagination__forward-btn:before
   position: absolute
   top: 4px
   left: -4px
@@ -48,7 +50,7 @@ schedule__pages_active
   border-right: 3px solid #FF3744
   transform: rotate(-45deg)
 
-.schedule__reverse-btn:before
+.pagination__reverse-btn:before
   position: absolute
   top: 4px
   left: 0
