companies to friendList component

--- a/src/components/GoBackButton/GoBackButton.sass
+++ b/src/components/GoBackButton/GoBackButton.sass
@@ -4,6 +4,8 @@
 .goBackButton
   display: flex
   position: absolute
+  top: 120px
+  left: 110px
 
 .goBackButton__button
   background-color: transparent
