all reviews to allCards

--- a/src/components/Pagination/Pagination.sass
+++ b/src/components/Pagination/Pagination.sass
@@ -5,10 +5,13 @@
 .pagination__nav
   display: flex
   justify-content: center
-  padding-bottom: 125px
+
+  flex-direction: column
 
 .pagination__page-conntainer
   display: flex
+  justify-content: center
+  padding-bottom: 64px
 
 .pagination__pages-list
   display: flex
