--- a/src/components/Review/Review.sass
+++ b/src/components/Review/Review.sass
@@ -2,11 +2,11 @@
 @import "../../styles/@mixins.sass"
 
 .review__card
+  max-width: 383px
   position: relative
   display: flex
   flex-direction: column
   flex-grow: 1
-  width: 383px
 
 .review__create-date
   @include heading-h3
