main fix styles

--- a/src/components/Review/Review.sass
+++ b/src/components/Review/Review.sass
@@ -1,12 +1,12 @@
 @import "../../styles/@global.sass"
 @import "../../styles/@mixins.sass"
 
+.review
+  margin: 0 auto
+
 .review__card
   max-width: 383px
-  position: relative
-  display: flex
-  flex-direction: column
-  flex-grow: 1
+  list-style: none
 
 .review__create-date
   @include heading-h3
@@ -45,7 +45,6 @@
   width: 100%
   height: 375px
   margin-top: 34px
-
 
 .review__card-img
   // margin: 36px 0 0
