--- a/src/pages/Main/Main.sass
+++ b/src/pages/Main/Main.sass
@@ -3,5 +3,7 @@
   flex-direction: column
   align-items: center
 
-.news__content
+.main__content
   padding-bottom: 48px
+  display: flex
+  flex-direction: row
