--- a/src/pages/Main/Main.sass
+++ b/src/pages/Main/Main.sass
@@ -2,11 +2,17 @@
   display: flex
   flex-direction: column
   align-items: center
+  max-width: 1200px
+  min-width: 255px
+  width: 100%
+  margin: 0 auto
 
 .main__content
   padding-bottom: 48px
   display: flex
   flex-direction: row
+  justify-content: space-between
+  gap: 30px
 
 .serverError
   margin: 10% auto 0
