--- a/src/components/About/about.sass
+++ b/src/components/About/about.sass
@@ -3,12 +3,24 @@
 
 .about
   max-width: 1200px
-  min-width: 940px
+  min-width: 255px
   margin: 0 auto
   margin-top: 88px
+  width: 100%
 
 .about__content
   gap: 65px
+  max-width: 1200px
+  min-width: 255px
+  width: 100%
+
+.about__text-block
+  max-width: 484px
+  min-width: 255px
+  width: 100%
+
+.about__logo
+  width: 100%
 
 .about__title
   @include heading-h1
@@ -28,6 +40,8 @@
   width: 100%
   height: 100%
   margin-top: 42px
+  min-width: 500px
+  max-width: 650px
 
 .title-span
   @include heading-h1
