--- a/src/components/NewsCard/NewsCard.sass
+++ b/src/components/NewsCard/NewsCard.sass
@@ -1,6 +1,6 @@
 @import "../../styles/@global.sass"
 @import "../../styles/@mixins.sass"
- 
+
 .news
   margin: 0 auto
 .news__title
@@ -42,12 +42,14 @@
   overflow: hidden
   height: 176px
 
-.news-card__img
-  margin: 36px 0 0
+.news__image-container
+  overflow: hidden
   width: 100%
-  object-fit: cover
-  max-height: 335px
+  height: 320px
+.news-card__img
+  width: 100%
   height: 100%
+  object-fit: cover
 
 .news-card__button
   @include textBold-16
@@ -65,6 +67,3 @@
   top: 3px
   left: 8px
   position: relative
-
-// .news-card:last-of-type
-//   margin-right: 0
