--- a/src/pages/AllCards/AllCards.sass
+++ b/src/pages/AllCards/AllCards.sass
@@ -1,6 +1,9 @@
 @import "../../styles/@global.sass"
 @import "../../styles/@mixins.sass"
 
+.allCards
+    width: 100%
+    
 .allCards__content
     justify-content: space-between
     display: flex
@@ -8,7 +11,7 @@
     max-width: 1020px
     flex-wrap: wrap
     padding-bottom: 79px
-
+    margin: 0 auto
 .allCards-card
     max-width: 383px
 
