--- a/src/pages/SingleNews/SingleNews.sass
+++ b/src/pages/SingleNews/SingleNews.sass
@@ -2,7 +2,7 @@
 @import "../../styles/@mixins.sass"
 
 .singleNews
-  margin: 0 auto
+  margin: 43px 0 0
   justify-content: space-between
   display: flex
   width: 1200px
@@ -10,7 +10,6 @@
   padding-bottom: 127px
 
 .singleNews__card
-  padding-top: 67px
   display: flex
   justify-content: space-between
   width: 100%
