--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -12,7 +12,10 @@
 
 .footer__info-block
   display: flex
-  gap: 68px
+  justify-content: space-between
+  max-width: 1100px
+  width: 100%
+  margin: 0 27px
 
 .footer__info-block-element:hover
   cursor: pointer
@@ -65,7 +68,6 @@
   flex-direction: column
   gap: 20px
   list-style: none
-  margin-right: 70px
 
 .footer__second-block-item
   display: flex
@@ -85,6 +87,7 @@
   font-weight: 400
   font-size: 16px
   line-height: 100%
+  width: 100%
 
 .footer__second-block-phone-icon
   background-image: url('../../assets/images/footer-phone.svg')
@@ -106,14 +109,13 @@
   display: flex
   gap: 89.16px
   margin: 0 auto
+  white-space: nowrap
+  @include textRegular-16
 
 .footer__law-block-text
   color: rgba(111, 111, 111, 1)
-  font-size: 16px
-  line-height: 100%
 
 .footer__law-block-link
-  @include textRegular-16
   display: flex
   text-decoration: none
   color: black
@@ -122,3 +124,39 @@
   content: url('../../assets/images/God.png')
   margin-left: 6px
 
+@media screen and (max-width: 950px)
+  .footer
+    height: 100%
+    padding: 10px 0 24px
+    gap: 24px
+
+  .footer__logo
+    border-radius: 30px
+    width: 70px
+    height: 70px
+    background-size: contain
+
+  .footer__first-block-content
+    @include textRegular-16
+
+  .footer__info-block
+    flex-direction: column
+    align-items: center
+
+  .footer__law-block
+    text-align: center
+    flex-direction: column-reverse
+    gap: 0
+    @include textRegular-12
+
+  .footer__law-block-link
+    @include textRegular-14
+    margin: 0 auto 18px
+
+  .footer__second-block
+    margin: 0 30px
+    gap: 24px
+    @include textSemiBold-14
+
+  .footer__second-block-address-text
+    @include textSemiBold-14
