--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -21,20 +21,26 @@
   cursor: pointer
 
 .footer__logo
+  grid-area: 1 / 1 / 3 / 2
   background-image: url('../../assets/images/footer-logo.svg')
   background-repeat: no-repeat
   background-position: center
   width: 161px
   height: 161px
+  margin-right: 24px
 
 .footer__first-block
-  display: flex
+  display: grid
+  grid-template-columns: 1fr 2fr
+  grid-template-rows: repeat(2, 1fr)
+  grid-column-gap: 0px
+  grid-row-gap: 0px
   font-weight: 600
   font-size: 20px
   line-height: 100%
 
 .footer__first-block-content
-  margin-left: 34px
+  grid-area: 1 / 2 / 2 / 3
 
 .footer__first-block-title
   color: red
@@ -44,7 +50,10 @@
   margin-bottom: 23px
 
 .footer__first-block-icons
-  display: flex
+  display: grid
+  grid-auto-flow: column
+  width: 50%
+  grid-area: 2 / 2 / 3 / 3
   gap: 14px
   list-style: none
 
