--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -33,8 +33,6 @@
   display: grid
   grid-template-columns: 1fr 2fr
   grid-template-rows: repeat(2, 1fr)
-  grid-column-gap: 0px
-  grid-row-gap: 0px
   font-weight: 600
   font-size: 20px
   line-height: 100%
@@ -144,9 +142,24 @@
     width: 70px
     height: 70px
     background-size: contain
+    margin: 0 auto
+    grid-area: 1 / 1 / 2 / 2
 
   .footer__first-block-content
     @include textRegular-16
+    grid-area: 1 / 2 / 2 / 3
+
+  .footer__first-block-icons
+    grid-area: 2 / 1 / 3 / 3
+    width: 100%
+    justify-items: center
+
+  .footer__first-block
+    display: grid
+    grid-template-columns: repeat(2, 1fr)
+    grid-template-rows: repeat(2, 1fr)
+    grid-column-gap: 0px
+    grid-row-gap: 0px
 
   .footer__info-block
     flex-direction: column
