--- a/src/components/BurgerMenu/BurgerMenu.sass
+++ b/src/components/BurgerMenu/BurgerMenu.sass
@@ -7,6 +7,7 @@
   cursor: pointer
   background-image: url('../../assets/images/burgerButton.svg')
   margin-right: 43px
+  margin-top: 8px
 
 .burger
   position: absolute
@@ -29,3 +30,8 @@
   display: flex
   justify-content: center
   align-items: center
+
+
+@media screen and (max-width: 999px)
+  .BurgerButton
+    margin-right: 0
