--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -38,3 +38,10 @@
 
 .header__nav-link:hover
   cursor: pointer
+
+@media screen and (max-width: 999px)
+  .header__info-block
+    margin: 0 36px
+
+  .header__nav-menu
+    gap: 16px
