navigation block hidden at mobile

--- a/src/components/Navigation/Navigation.sass
+++ b/src/components/Navigation/Navigation.sass
@@ -1,3 +1,5 @@
+@import "../../styles/@global.sass"
+@import "../../styles/@mixins.sass"
 
 .navigation__container
   display: flex
@@ -9,3 +11,4 @@
     .navigation__container
       display: flex
       flex-direction: column
+      @include textBold-20
