--- a/src/components/BurgerMenu/BurgerMenu.sass
+++ b/src/components/BurgerMenu/BurgerMenu.sass
@@ -29,7 +29,7 @@
   position: relative
   display: flex
   justify-content: center
-  align-items: center
+  margin-top: 70px
 
 
 @media screen and (max-width: 999px)
