--- a/src/components/NavigationBlock/NavigationBlock.sass
+++ b/src/components/NavigationBlock/NavigationBlock.sass
@@ -8,3 +8,8 @@
   gap: 88px
   align-items: center
   justify-content: center
+
+
+@media screen and (max-width: 999px)
+  .navigation-block
+    display: none
