--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -43,5 +43,10 @@
   .header__info-block
     margin: 0 36px
 
+  .is-sticky
+    position: sticky
+    top: 0
+    background: linear-gradient(180deg, rgba(251, 149, 149, 1) 0%, rgba(253, 216, 216, 1) 49.48%, rgba(255, 255, 255, 0.5) 85.94%)
+
   .header__nav-menu
     gap: 16px
