--- a/src/components/BurgerMenu/BurgerMenu.sass
+++ b/src/components/BurgerMenu/BurgerMenu.sass
@@ -16,8 +16,7 @@
 
 .burger_opened
   display: flex
-  position: fixed
-  top: 85px
+  top: 83px
   right: 0
   left: 0
   bottom: 0
@@ -29,7 +28,7 @@
   position: relative
   display: flex
   justify-content: center
-  margin-top: 70px
+  padding-top: 70px
 
 
 @media screen and (max-width: 999px)
