--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -5,6 +5,7 @@
   background: linear-gradient(180deg, rgba(251, 149, 149, 0.7) 0%, rgba(253, 216, 216, 0.7) 49.48%, rgba(255, 255, 255, 0.7) 85.94%)
   display: flex
   align-items: center
+  z-index: 11
 
 .header__info-block
   margin: 0 auto 0
