--- a/src/pages/Contacts/Contacts.sass
+++ b/src/pages/Contacts/Contacts.sass
@@ -9,12 +9,12 @@
 .contacts__title
   @include heading-h1
   color: rgba(243, 66, 71, 1)
-  margin: 64px 0 0
+  margin: 64px 0 57px
 
 .contacts__img
   max-width: 871px
   width: 100%
-  padding: 0 60px
+  padding: 0 60px 147px
 
 .contacts__main
   margin-top: 88px
