--- a/src/components/Review/Review.sass
+++ b/src/components/Review/Review.sass
@@ -17,11 +17,16 @@
   @include heading-h3
   margin-top: 30px
   max-width: 350px
+  overflow: hidden
+  white-space: nowrap
+  text-overflow: ellipsis
 
 .review__text
   @include textRegular-20
   margin: 32px 0
-  min-height: 88px
+  height: 110px
+  display: block
+  overflow: hidden
 
 .review__button
   @include textBold-16
