Styled imaged masked solved and validation added

--- a/src/components/NewsCard/NewsCard.sass
+++ b/src/components/NewsCard/NewsCard.sass
@@ -58,6 +58,7 @@
   color: rgba(255, 55, 68, 1)
   cursor: pointer
   display: flex
+  margin-bottom: 34px
 
 .news-card__button::after
   background-image: url('../../assets/images/button-news.svg')
