--- a/src/pages/AddReview/AddReview.sass
+++ b/src/pages/AddReview/AddReview.sass
@@ -29,7 +29,7 @@
   padding: 44px 102px 63px
   display: flex
   flex-direction: column
-  gap: 35px
+  gap: 23px
 
 .add-review__form-lable
   display: flex
@@ -85,3 +85,11 @@
 
 .add-review__form-submit_disabled
   background: #6F6F6F
+
+.add-review__error-text
+  color: rgba(255, 55, 68, 1)
+  font-size: 12px
+
+.add-review__error-text_hidden
+  visibility: hidden
+  font-size: 12px
