--- a/src/pages/AllCards/AllCards.sass
+++ b/src/pages/AllCards/AllCards.sass
@@ -3,7 +3,7 @@
 
 .allCards
     width: 100%
-    
+
 .allCards__content
     justify-content: space-between
     display: flex
@@ -12,6 +12,8 @@
     flex-wrap: wrap
     padding-bottom: 79px
     margin: 0 auto
+    row-gap: 92px
+    
 .allCards-card
     max-width: 383px
 
