--- a/src/pages/ReviewSingle/ReviewSingle.sass
+++ b/src/pages/ReviewSingle/ReviewSingle.sass
@@ -34,11 +34,14 @@
   line-height: 100%
   margin: 14px 0 32px
   color: #FF3744
+  max-width: 715px
+  overflow: hidden
+  white-space: nowrap
+  text-overflow: ellipsis
 
 .review-single__image-container
-  overflow: hidden
   width: 385px
-  height: 340px
+  height: 450px
   flex-shrink: 0
 
 .review-single__card-img
