--- a/src/components/ScheduleItem/ScheduleItem.sass
+++ b/src/components/ScheduleItem/ScheduleItem.sass
@@ -19,6 +19,11 @@
   padding-top: 28px
   color: #FF3744
   margin-bottom: 24px
+  overflow: hidden
+  white-space: nowrap
+  text-overflow: ellipsis
+
+
 
 .schedule__item-address-head
   @include textRegular-14
