Slider done (on single review page)

--- a/src/pages/ReviewSingle/ReviewSingle.sass
+++ b/src/pages/ReviewSingle/ReviewSingle.sass
@@ -44,6 +44,9 @@
   height: 450px
   flex-shrink: 0
 
+.review-single__image-container
+  cursor: pointer
+
 .review-single__card-img
   width: 100%
   clip-path: url(#review-mask)
