--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -183,5 +183,7 @@
     @include textSemiBold-14
 
   @media screen and (max-width: 600px)
+    .footer
+      padding: 0 20px
     .footer__info-block
       width: 100%
