review style fixe (text stroke)

--- a/src/components/Review/Review.sass
+++ b/src/components/Review/Review.sass
@@ -24,8 +24,10 @@
 .review__text
   @include textRegular-20
   margin: 32px 0
-  height: 110px
-  display: block
+  height: 108px
+  display: -webkit-box
+  -webkit-line-clamp: 5
+  -webkit-box-orient: vertical
   overflow: hidden
 
 .review__button
