--- a/src/components/NotFound/NotFound.sass
+++ b/src/components/NotFound/NotFound.sass
@@ -1,7 +1,7 @@
 @import "../../styles/@global.sass"
 @import "../../styles/@mixins.sass"
 
-.nonFound
+.notFound
   display: flex
   flex-direction: column
   justify-content: center
