--- a/src/components/GoBackButton/GoBackButton.sass
+++ b/src/components/GoBackButton/GoBackButton.sass
@@ -24,3 +24,10 @@
 
 .goBackButton__button:hover
   cursor: pointer
+
+@media screen and (max-width: 767px)
+  .goBackButton
+    left: 10px
+
+  .goBackButton__button
+    @include textRegular-12
