--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -12,6 +12,7 @@
   display: flex
   width: 1200px
   align-items: center
+  padding: 0 10px
 
 .header__logo
   background-image: url('../../assets/images/header-logo.svg')
