--- a/src/pages/SingleNews/SingleNews.sass
+++ b/src/pages/SingleNews/SingleNews.sass
@@ -26,7 +26,7 @@
 .singleNews__text
   @include textRegular-20
   margin: 32px 0
-
+ 
 .singleNews__video
   width: 560px
   height: 315px
@@ -44,3 +44,6 @@
   max-width: 450px
   box-sizing: content-box
   overflow: hidden
+
+
+@media screen and (max-width: 999px)
