--- a/src/components/GoBackButton/GoBackButton.sass
+++ b/src/components/GoBackButton/GoBackButton.sass
@@ -5,7 +5,7 @@
   display: flex
   position: absolute
   top: 120px
-  left: 110px
+  left: 7vw
 
 .goBackButton__button
   background-color: transparent
@@ -27,7 +27,7 @@
 
 @media screen and (max-width: 767px)
   .goBackButton
-    left: 10px
+    left: 10vw
 
   .goBackButton__button
     @include textRegular-12
