singleReview/news fix styles

--- a/src/pages/SingleNews/SingleNews.sass
+++ b/src/pages/SingleNews/SingleNews.sass
@@ -56,6 +56,8 @@
     padding-bottom: 136px
 
 @media screen and (max-width: 500px)
+  .singleNews__card
+    flex-direction: column
   .singleNews__text
     @include textRegular-14
 
