--- a/src/pages/ReviewSingle/ReviewSingle.sass
+++ b/src/pages/ReviewSingle/ReviewSingle.sass
@@ -1,15 +1,18 @@
+@import "../../styles/@global.sass"
+@import "../../styles/@mixins.sass"
+  
 .review-single
-  margin: 43px 0 0
+  margin: 43px auto 0
   display: flex
   row-gap: 67px
-  flex-direction: column
-  max-width: 1200px
+  width: 100%
   position: relative
 
 .review-single__block
-  padding-top: 67px
   display: flex
-  column-gap: 81px
+  justify-content: space-between
+  width: 100%
+  padding: 67px 56px 0
 
 .review-single__review-block
   display: flex
@@ -22,16 +25,10 @@
   line-height: 120.5%
 
 .review-single__text
-  font-weight: 400
-  font-size: 20px
-  line-height: 110%
+  @include textRegular-20
 
 .review-single__user
-  font-family: 'Arkhip'
-  font-style: normal
-  font-weight: 400
-  font-size: 24px
-  line-height: 100%
+  @include heading-h3
   margin: 14px 0 32px
   color: #FF3744
   max-width: 715px
@@ -53,3 +50,17 @@
   width: 100%
   height: 100%
   object-fit: cover
+
+@media screen and (max-width: 999px)
+  .review-single__text
+    @include textRegular-16
+  .review-single__user
+    
+
+@media screen and (max-width: 500px)
+  .review-single__text
+    @include textRegular-14
+
+  .review-single__block
+      flex-direction: column
+
