--- a/src/pages/SingleNews/SingleNews.sass
+++ b/src/pages/SingleNews/SingleNews.sass
@@ -45,6 +45,7 @@
   max-width: 450px
   box-sizing: content-box
   overflow: hidden
+  cursor: pointer
 
 @media screen and (max-width: 999px)
   .singleNews__text
