--- a/src/pages/Help/Help.sass
+++ b/src/pages/Help/Help.sass
@@ -6,6 +6,7 @@
   display: flex
   flex-direction: column
   padding-bottom: 128px
+  width: 100%
 
 .help__title
   @include heading-h1
@@ -15,7 +16,8 @@
 
 .help__intro-container
   display: flex
-  margin-bottom: 64px
+  justify-content: space-between
+  margin: 0 20px 64px
 
 .help__left-intro-container
   align-self: center
@@ -45,19 +47,22 @@
   list-style: none
   display: flex
   max-width: 1200px
+  justify-content: space-between
+  align-items: center
+  width: 100%
+  margin: 0 20px
 
 .help__method
   background: #F8F8F8
   border: 1px solid #FF3744
   box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.1)
   border-radius: 30px
-  padding: 65px 77px
+  padding: 65px 60px
   display: flex
   flex-direction: column
   align-items: center
-
-.help__method:first-child
-  margin-right: 24px
+  max-width: 588px
+  width: 100%
 
 .help__item-title
   @include heading-h3
@@ -69,6 +74,54 @@
   text-align: center
   margin-bottom: 25px
 
-
 .help__item-img
   margin-bottom: 47px
+
+@media screen and (max-width: 1300px)
+  .help
+    padding-bottom: 87px
+
+  .help__right-intro-container
+    width: 377px
+
+  .help__right-intro-quote
+    width: 377px
+  .help__intro-container
+    margin: 0 48px 163px
+  .help__list
+    width: 95%
+    flex-direction: column
+
+  .help__method:first-child
+    margin-bottom: 140px
+
+@media screen and (max-width: 820px)
+  .help__title
+    font-size: 18px
+  .help__intro-container
+    flex-direction: column-reverse
+    justify-content: center
+    align-items: center
+    margin-bottom: 100px
+
+  .help__right-intro-container
+    width: 260px
+
+  .help__right-intro-quote
+    width: 260px
+  .help__right-intro-container
+    margin-bottom: 62px
+
+  .help__method
+    margin: 0 33px
+
+  .help__item-img
+    max-width: 228px
+
+  .help__item-title
+    font-size: 16px
+  .help__item-descr
+    font-size: 16px
+@media screen and (max-width: 600px)
+  .help__list
+    margin: 0 auto
