main styles fix

--- a/src/components/NewsCard/NewsCard.sass
+++ b/src/components/NewsCard/NewsCard.sass
@@ -1,18 +1,8 @@
 @import "../../styles/@global.sass"
 @import "../../styles/@mixins.sass"
 
-.news
-  margin: 0 auto
-.news__title
-  height: 72px
-  width: 1200px
-  background: radial-gradient(50% 50% at 50% 50%, rgba(251, 149, 149, 0.7) 0%, rgba(255, 255, 255, 0.4) 100%)
-  margin: 0 auto 0
-  display: flex
-  gap: 88px
-  align-items: center
-  justify-content: center
-  @include heading-h1
+// .news
+//   margin: 0 auto
 
 .news-card
   max-width: 383px
