--- a/src/pages/Main/Main.sass
+++ b/src/pages/Main/Main.sass
@@ -16,6 +16,21 @@
   flex-direction: row
   justify-content: space-between
   gap: 30px
+  width: 100%
+
+.main__section
+  margin: 0 auto
+  width: 100%
+.main__title
+  height: 72px
+  max-width: 1200px
+  background: radial-gradient(50% 50% at 50% 50%, rgba(251, 149, 149, 0.7) 0%, rgba(255, 255, 255, 0.4) 100%)
+  margin: 0 auto 0
+  display: flex
+  gap: 88px
+  align-items: center
+  justify-content: center
+  @include heading-h1
 
 .serverError
   width: 100%
