--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -44,6 +44,7 @@
 @media screen and (max-width: 999px)
   .header__info-block
     margin: 0 36px
+    padding: 0
 
   .is-sticky
     position: sticky
@@ -52,3 +53,8 @@
 
   .header__nav-menu
     gap: 16px
+
+  .header__logo
+    width: 60px
+    height: 60px
+    background-size: cover
