--- a/src/components/About/about.sass
+++ b/src/components/About/about.sass
@@ -4,15 +4,15 @@
 .about
   max-width: 1200px
   min-width: 255px
-  margin: 0 auto
   margin-top: 88px
-  width: 100%
 
 .about__content
   gap: 65px
   max-width: 1200px
   min-width: 255px
   width: 100%
+  display: flex
+  flex-direction: row
 
 .about__text-block
   max-width: 484px
@@ -31,16 +31,13 @@
 .about__text
   @include textRegular-20
   margin: 16px 0 24px
-
-.about__content
-  display: flex
-  flex-direction: row
+  max-width: 406px
 
 .about__img
   width: 100%
   height: 100%
   margin-top: 42px
-  min-width: 500px
+  min-width: 255px
   max-width: 650px
 
 .title-span
@@ -49,3 +46,44 @@
 
 .about__fond
   padding-right: 25px
+
+@media screen and (max-width: 1250px)
+  .about
+    margin: 0 30px
+
+@media screen and (max-width: 1000px)
+  .about__title
+    margin-top: 44px
+    font-size: 32px
+
+  .title-span
+    font-size: 32px
+
+@media screen and (max-width: 800px)
+  .about
+    margin: 0 34px
+  .about__content
+    align-items: center
+    flex-direction: column
+
+  .title-span
+    font-size: 19px
+    line-height: 19px
+
+  .about__title
+    margin-top: 32px
+    font-size: 19px
+    line-height: 19px
+
+  .about__text
+    font-size: 16px
+
+  .about__button
+    margin-top: 46px
+    margin-bottom: 64px
+    width: 100%
+
+
+
+
+
