--- a/src/components/Search/Search.sass
+++ b/src/components/Search/Search.sass
@@ -7,6 +7,7 @@
   right: 0
   align-items: center
   display: flex
+  margin: 0 20px
 
 .search__button
   position: absolute
@@ -37,3 +38,9 @@
 
 .search__button_type_hidden
   top: 9px
+
+@media screen and (max-width: 900px)
+  .search
+    position: relative
+    width: 220px
+    margin: 20px auto 0
