--- a/src/pages/AllCards/AllCards.sass
+++ b/src/pages/AllCards/AllCards.sass
@@ -13,7 +13,7 @@
     padding-bottom: 79px
     margin: 0 auto
     row-gap: 92px
-    
+
 .allCards-card
     max-width: 383px
 
@@ -27,3 +27,7 @@
 .allCards__head
     margin: 64px 0 74px
     position: relative
+
+@media screen and (max-width: 999px)
+    .allCards__title
+        font-size: 30px
