--- a/src/components/NewsCard/NewsCard.sass
+++ b/src/components/NewsCard/NewsCard.sass
@@ -7,6 +7,7 @@
 .news-card
   max-width: 383px
   list-style: none
+  width: 100%
 
 .news-card__create-date
   @include heading-h3
@@ -32,14 +33,14 @@
   overflow: hidden
   height: 176px
 
-.news__image-container
-  overflow: hidden
-  width: 100%
-  height: 320px
-.news-card__img
-  width: 100%
-  height: 100%
-  object-fit: cover
+// .news__image-container
+//   overflow: hidden
+//   width: 100%
+//   height: 320px
+// .news-card__img
+//   width: 100%
+//   height: 100%
+//   object-fit: cover
 
 .news-card__button
   @include textBold-16
@@ -58,3 +59,7 @@
   top: 3px
   left: 8px
   position: relative
+
+@media screen and (max-width: 1000px)
+  .news-card__text
+    @include textSemiBold-16
