--- a/src/components/Review/Review.sass
+++ b/src/components/Review/Review.sass
@@ -7,6 +7,7 @@
 .review__card
   max-width: 383px
   list-style: none
+  width: 100%
 
 .review__create-date
   @include heading-h3
@@ -15,11 +16,13 @@
 
 .review__card-title
   @include heading-h3
-  margin-top: 30px
+  margin-top: 11px
+  height: 48px
   max-width: 350px
+  display: -webkit-box
+  -webkit-line-clamp: 2
+  -webkit-box-orient: vertical
   overflow: hidden
-  white-space: nowrap
-  text-overflow: ellipsis
 
 .review__text
   @include textRegular-20
