--- a/src/pages/Main/Main.sass
+++ b/src/pages/Main/Main.sass
@@ -19,7 +19,7 @@
   width: 100%
 
 .main__section
-  margin: 0 auto
+  padding: 0 20px
   width: 100%
 .main__title
   height: 72px
@@ -63,11 +63,18 @@
   padding-top: 27px
   @include heading-h3
 
-@media screen and (max-width: 600px)
-    .serverError__logo
-      width: 86px
-      height: 86px
+@media screen and (max-width: 800px)
+  .main__content
+    padding-bottom: 0
+    margin-bottom: 57px
+    flex-direction: column
+    align-items: center
+    gap: 81px
 
-    .serverError__text
-      padding-top: 20px
-      @include textRegular-16
+@media screen and (max-width: 600px)
+  .serverError__logo
+    width: 86px
+    height: 86px
+  .serverError__text
+    padding-top: 20px
+    @include textRegular-16
