--- a/src/components/Slider/Slider.sass
+++ b/src/components/Slider/Slider.sass
@@ -34,7 +34,7 @@
 
 .slider-container
   position: relative
-  width: 588px
+  // width: 588px
   height: 588px
   box-sizing: border-box
   display: flex
@@ -59,3 +59,5 @@
 .slider__single-img
   widows: 100%
   height: 100%
+  object-fit: cover
+  object-position: center top
