--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -151,6 +151,7 @@
     grid-area: 2 / 1 / 3 / 3
     width: 100%
     justify-items: center
+    padding-bottom: 20px
 
   .footer__first-block
     display: grid
