--- a/src/pages/SinglePage/SinglePage.sass
+++ b/src/pages/SinglePage/SinglePage.sass
@@ -1,33 +1,34 @@
 @import "../../styles/@global.sass"
 @import "../../styles/@mixins.sass"
-  
-.review-single
-  margin: 43px auto 0
+
+.singlePage
+  margin: 20px auto 0
   display: flex
   row-gap: 67px
   width: 100%
   position: relative
 
-.review-single__block
+.singlePage__block
   display: flex
   justify-content: space-between
   width: 100%
   padding: 67px 56px 0
 
-.review-single__review-block
+.singlePage__text-block
   display: flex
   flex-direction: column
+  max-width: 60%
 
-.review-single__date
+.singlePage__date
   margin: 0
   font-weight: 400
   font-size: 16px
   line-height: 120.5%
 
-.review-single__text
+.singlePage__text
   @include textRegular-20
 
-.review-single__user
+.singlePage__user
   @include heading-h3
   margin: 14px 0 32px
   color: #FF3744
@@ -36,15 +37,10 @@
   white-space: nowrap
   text-overflow: ellipsis
 
-.review-single__image-container
-  width: 385px
-  height: 450px
-  flex-shrink: 0
-
-.review-single__image-container
+.singlePage__image-container
   cursor: pointer
 
-.review-single__card-img
+.singlePage__card-img
   width: 100%
   clip-path: url(#review-mask)
   width: 100%
@@ -52,15 +48,24 @@
   object-fit: cover
 
 @media screen and (max-width: 999px)
-  .review-single__text
+  .singlePage__text
     @include textRegular-16
-  .review-single__user
-    
+  .singlePage__user
+
+@media screen and (max-width: 830px)
+  .singlePage
+    padding-bottom: 110px
+  .singlePage__block
+    align-items: center
+    flex-direction: column-reverse
+    padding: 56px 32px 0
+
+  .singlePage__text-block
+    max-width: 100%
+
+  .singlePage__text
+    padding: 40px 0 0
 
 @media screen and (max-width: 500px)
-  .review-single__text
+  .singlePage__text
     @include textRegular-14
-
-  .review-single__block
-      flex-direction: column
-
