--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -120,6 +120,10 @@
 .footer__law-block-text
   color: rgba(111, 111, 111, 1)
 
+.footer__law-block-navlink
+  color: rgba(111, 111, 111, 1)
+  text-decoration: none
+
 .footer__law-block-link
   display: flex
   text-decoration: none
