--- a/src/components/Slider/Slider.sass
+++ b/src/components/Slider/Slider.sass
@@ -34,7 +34,7 @@
 
 .slider-container
   position: relative
-  // width: 588px
+  width: 588px
   height: 588px
   box-sizing: border-box
   display: flex
