--- a/src/pages/AllCards/AllCards.sass
+++ b/src/pages/AllCards/AllCards.sass
@@ -13,6 +13,7 @@
     padding-bottom: 79px
     margin: 0 auto
     row-gap: 92px
+    padding: 0 40px 64px
 
 .allCards-card
     max-width: 383px
@@ -31,3 +32,8 @@
 @media screen and (max-width: 999px)
     .allCards__title
         font-size: 30px
+
+@media screen and (max-width: 862px)
+    .allCards__content
+        padding: 0 10px 64px
+        justify-content: center
