--- a/src/components/ScheduleItem/ScheduleItem.sass
+++ b/src/components/ScheduleItem/ScheduleItem.sass
@@ -16,9 +16,10 @@
   padding-top: 28px
   color: #FF3744
   margin-bottom: 24px
+  display: -webkit-box
+  -webkit-line-clamp: 2
+  -webkit-box-orient: vertical
   overflow: hidden
-  white-space: nowrap
-  text-overflow: ellipsis
 
 .schedule__item-address-head
   @include textRegular-14
