AddReview adaptive was done

--- a/src/components/UpLoad/UpLoad.sass
+++ b/src/components/UpLoad/UpLoad.sass
@@ -48,3 +48,11 @@
 
 .upload__preview-button:hover
   cursor: pointer
+
+@media screen and (max-width: 635px)
+  .upload
+    max-width: 100%
+  .upload__load
+    width: 100%
+  .upload__delete
+    width: 100%
