--- a/src/components/Form/Form.sass
+++ b/src/components/Form/Form.sass
@@ -6,7 +6,7 @@
   border-radius: 30px
   background: #F8F8F8
   box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.1)
-  width: 996px
+  max-width: 996px
   height: 753px
   padding: 87px 0px 39px 70px
   margin: 48px 0 128px
@@ -116,7 +116,7 @@
   border-radius: 30px
   border: none
   color: rgba(255, 255, 255, 1)
-  height: 38px
+  height: 41px
   align-items: center
   font-size: 16px
   font-style: normal
@@ -129,3 +129,39 @@
 .form__error-text
   color: rgba(255, 55, 68, 1)
   font-size: 12px
+
+@media screen and (max-width: 1005px)
+  .form
+    max-width: 961px
+    margin: 48px 20px 128px
+    padding: 87px 70px 39px 70px
+
+@media screen and (max-width: 740px)
+  .form
+    padding: 87px 17.5px 39px
+
+  .form__input-lable
+    min-width: 160px
+
+@media screen and (max-width: 635px)
+  .form
+    border: none
+    max-width: 100%
+    height: fit-content
+    padding: 32px 17.5px 32px
+    margin: 0 20px 64px
+
+  .form__inputs-block
+    flex-direction: column
+
+  .form__input-lable
+    width: 100%
+
+  .form__input-lable:last-child
+    width: 100%
+
+  .form__agreement
+    margin: 16px 0 14px
+
+  .form__button
+    width: 100%
