--- a/src/pages/Registration/Registration.sass
+++ b/src/pages/Registration/Registration.sass
@@ -21,5 +21,19 @@
   line-height: 100%
   color: #FF3744
 
+@media screen and (max-width: 1005px)
+  .registration__go-back
+    margin: 0 20px 0
+    
+@media screen and (max-width: 635px)
+  .registration__go-back
+    margin: 0 20px 0
+    align-items: flex-start
+    box-sizing: border-box
+
+@media screen and (max-width: 575px)
+  .registration__text
+    max-width: 70%
+
 
 
