Page Volunteering was adapted

--- a/src/components/FormVolunteering/FormVolunteering.sass
+++ b/src/components/FormVolunteering/FormVolunteering.sass
@@ -136,3 +136,31 @@
 .form-volunteering__error-text
   color: rgba(255, 55, 68, 1)
   font-size: 12px
+
+@media screen and (max-width: 745px)
+  .form-volunteering__title
+    text-align: center
+    font-family: 'Arkhip'
+    font-style: normal
+    font-weight: 400
+    font-size: 16px
+    line-height: 100%
+
+  .form-volunteering
+    width: 100%
+
+  .form-volunteering__input-lable
+    width: 100%
+
+  .form-volunteering__input-lable:last-child
+    width: 100%
+
+@media screen and (max-width: 600px)
+  .form-volunteering
+    padding: 28px 17px 32px 17px
+
+  .form-volunteering__button
+    width: 100%
+
+  .form-volunteering__agreement
+    margin: 16px 0 14px
