Page Volunteering fixed

--- a/src/pages/Volunteering/Volunteering.sass
+++ b/src/pages/Volunteering/Volunteering.sass
@@ -37,6 +37,7 @@
     flex-direction: row
     max-width: 773px
     gap: 30px
+    align-items: center
 
 @media screen and (max-width: 745px)
   .volunteering
