--- a/src/components/Modal/Modal.sass
+++ b/src/components/Modal/Modal.sass
@@ -38,3 +38,7 @@
 .modal__close:hover
   cursor: pointer
   opacity: 0.6
+
+@media screen and (max-width: 600px)
+  .modal__container
+    margin: 50px auto 0
