Style active button was added

--- a/src/components/Form/Form.sass
+++ b/src/components/Form/Form.sass
@@ -126,6 +126,9 @@
 .form__button_disabled
   background: #6F6F6F
 
+.form__button_active
+  background: rgba(211, 29, 41, 1)
+
 .form__error-text
   color: rgba(255, 55, 68, 1)
   font-size: 12px
