--- a/src/components/FormVolunteering/FormVolunteering.sass
+++ b/src/components/FormVolunteering/FormVolunteering.sass
@@ -133,6 +133,9 @@
 .form-volunteering__button_disabled
   background: #6F6F6F
 
+.form-volunteering__button_active
+  background: rgba(211, 29, 41, 1)
+
 .form-volunteering__error-text
   color: rgba(255, 55, 68, 1)
   font-size: 12px
