Captcha was added (without logic)

--- a/src/components/FormVolunteering/FormVolunteering.sass
+++ b/src/components/FormVolunteering/FormVolunteering.sass
@@ -140,6 +140,9 @@
   color: rgba(255, 55, 68, 1)
   font-size: 12px
 
+.form-volunteering__end-text
+  margin: 17px 0 17px
+
 @media screen and (max-width: 745px)
   .form-volunteering__title
     text-align: center
