--- a/src/components/Capcha/Captcha.sass
+++ b/src/components/Capcha/Captcha.sass
@@ -2,6 +2,7 @@
   display: flex
   justify-content: space-between
   align-items: center
+  max-width: 532px
 
 .captcha__container
   width: 220px
@@ -26,6 +27,9 @@
   line-height: 100%
   font-weight: 400
   text-align: center
+  display: flex
+  align-items: center
+  gap: 5px
 
 .captcha__btn:hover
   cursor: pointer
@@ -52,7 +56,11 @@
 .captcha__input:-ms-input-placeholder
    text-align: center
 
-
+.captcha__btn-icon
+  background-image: url('../../assets/images/arrow-clockwise.svg')
+  background-size: 20px 20px
+  width: 20px
+  height: 20px
 
 
 @media screen and (max-width: 635px)
