--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -189,6 +189,6 @@
 
 @media screen and (max-width: 600px)
     .footer
-      padding: 0 20px
+      padding: 0 20px 10px
     .footer__info-block
       width: 100%
